# shared_buffer_rng

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs  common.rs  iai.rs
src/: lib.rs  main.rs
