[package]
name = "shared_buffer_rng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
log = "0.4.20"
async-channel = "2.1.1"

[dev-dependencies]
test-log = "0.2.14"
scc = "2.0.8"