[package]
name = "shared_buffer_rng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
log = "0.4.20"
bytemuck = "1.14.0"
crossbeam-channel = "0.5.11"
crossbeam-utils = "0.8.19"
thread-priority = "0.15.1"
thread-local-object = "0.1.0"

[dev-dependencies]
scc = "2.0.9"
criterion = { version = "0.5.1", features = ["html_reports"] }
num_cpus = "1.16.0"
iai = "0.1.1"
paste = "1.0.14"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
